testing/functionaltest/suts/multiple-kv-servers/configs/kvserver-ssp/envoy_kvserver.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9902

static_resources:
  listeners:
  - name: kvsrv_listener
    per_connection_buffer_limit_bytes: 52428800
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 2002
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: envoy_router
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: /kv_server.v1.KeyValueService
                route:
                  cluster: kvsrv
                  timeout: 2s
              - match:
                  prefix: /kv_server.v2.KeyValueService
                route:
                  cluster: kvsrv
                  timeout: 2s
              - match:
                  prefix: /grpc.reflection.v1alpha.ServerReflection
                route:
                  cluster: kvsrv
                  timeout: 2s
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: kvsrv
    connect_timeout: 2s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    dns_lookup_family: V4_ONLY
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: { }
    load_assignment:
      cluster_name: kvsrv
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: kv-server
                port_value: 2000
